syntax = "proto3";

package components;

option go_package = "/components";

import "components/entity.proto";
import "components/provenance.proto";
import "components/overrides.proto";


message PublishEntityRequest {
    Entity entity = 1;
}

message PublishEntityResponse {
    bool success = 1;
    string message = 2; 
}

message PublishEntitiesResponse {
    bool success = 1;
    string message = 2;
}

message GetEntityRequest {
    string entity_id = 1;
}

message GetEntityResponse {
    Entity entity = 1;
}

message OverrideEntityRequest {
    Entity entity = 1;
    repeated string field_path = 2;
    Provenance provenance = 3;
}

message OverrideEntityResponse {
    OverrideStatus status = 1;
}

message RemoveEntityOverrideRequest {
    Entity entity = 1;
    repeated string field_path = 2;
}

message RemoveEntityOverrideResponse {

}

service EntityManager {
    rpc PublishEntity(PublishEntityRequest) returns (PublishEntityResponse);

    rpc PublishEntities(stream Entity) returns (PublishEntitiesResponse);

    rpc GetEntity(GetEntityRequest) returns (GetEntityResponse);

    rpc OverrideEntity(OverrideEntityRequest) returns (OverrideEntityResponse);

    rpc RemoveEntityOverride(RemoveEntityOverrideRequest) returns (RemoveEntityOverrideResponse);
}
